[package]
name = "taw"
version = "1.1.2"
edition = "2021"
description = "A command-line file-tree walker that utilizes REGEX matching."
authors = ["Christian Alexander Marrero"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
jwalk = "0.8.1"
regex = "1.10.4"
